<resources>
    <string name="app_name">Reciclaje</string>
    <string name="title_activity_maps">Map</string>

    <!-- Activity Mapa -->
    <string name="iniciarSesion_str">Iniciar Sesion</string>
    <string name="buscarMaterial_str">Buscar material</string>
    <string name="mejorPrecio_str">Mejor precio</string>
    <string name="cercana_str">+ Cercana</string>
    <string name="guiaReciclaje_str">Guia de reciclaje</string>
    <string name="manualidades_str">Manualidades</string>
    <string name="aceptar_str">Aceptar</string>
    <string name="mensaje_str">Debes registrarte o iniciar sesion para usar esta funcion.</string>

    <!-- Iniciar Sesion -->
    <string name="usuarioHint_str">Usuario</string>
    <string name="contraHint_str">Contraseña</string>
    <string name="noCerrarSesion_str">Mantener la sesion</string>
    <string name="recuperarContra_str">Recuperar contraseña</string>
    <string name="recicladora_str">Recicladora</string>
    <string name="registrate_str">Registrate</string>
    <string name="incorrectos_str">El usuario o contraseña son incorrectos</string>
    <string name="IngreseCorreo_str">Ingrese Correo</string>
    <string name="enviar_str">Enviar</string>

    <!-- Registro usuario -->
    <string name="nombreUsuario_str">Nombre de usuario</string>
    <string name="correo_str">Correo</string>
    <string name="confirmaContra_str">Confirma contraseña</string>
    <string name="cancelar_str">Cancelar</string>
    <string name="registrar_str">Registrar</string>
    <string name="mensajeUsuario_str">6 caracteres de A-z y 0-9</string>
    <string name="mensajeUsuario2_str">11 caracteres de A-z y 0-9</string>
    <string name="mensajeContras_str">Las contraseñas no coinciden</string>
    <string name="yaexiste_str">Usuario ya existe</string>
    <string name="registrado_str">Usuario registrado</string>

    <!-- Sesion usuario -->
    <string name="modificarDatos_str">Modificar datos</string>
    <string name="cerrarSesion_str">Cerrar sesion</string>
    <string name="modificar_str">Modificar</string>
    <string name="datosModificados_str">Datos modificados</string>
    <string name="materialesDisponibles_str">Materiales disponibles</string>
    <string name="maximoMateriales_str">Maximo 1 material</string>
    <string name="calificacionAgregada_str">Calificacion agregada!</string>
    <string name="calificacionModif_str">Calificacion modificada!</string>

    <!-- Sesion recicladora -->
    <string name="hola_str">Hola:</string>
    <string name="agregarImagen_str">Fotos</string>
    <string name="misDatos_str">Mis datos</string>
    <string name="horario_str">Horario</string>
    <string name="ubicacion_str">Ubicacion</string>
    <string name="materiales_str">Materiales</string>
    <string name="material_str">Material</string>
    <string name="precio_str">Precio</string>
    <string name="unidad_str">Unidad</string>
    <string name="agregar_str">Agregar</string>
    <string name="letras30_str">Maximo 25 caracteres</string>
    <string name="caracteres7_str">Maximo 7 caracteres</string>
    <string name="caracteres15_str">Maximo 15 caracteres</string>
    <string name="agregarMaterial_str">Agregar material</string>
    <string name="materialAgregado_str">Material agregado</string>
    <string name="eliminar_str">Eliminar</string>
    <string name="material_eliminado_str">Material Eliminado</string>
    <string name="nombreRecicladora_str">Nombre recicladora</string>
    <string name="arroba_str">Debe contener un @</string>
    <string name="puntuacion_str">Puntuacion:</string>
    <string name="evaluar_str">Evaluar</string>
    <string name="registrarVenta_str">Ventas</string>
    <string name="registrarCompra_str">Compras</string>
    <string name="reporte_str">Reporte</string>
    <string name="agregarMaterialLista_str">Agrega un material a la lista</string>
    <string name="AgregarUnidad_str">Agrega una unidad</string>

    <!-- Datos Recicladora -->
    <string name="tusDatos_str">Tus datos</string>
    <string name="sinDatos_str">Sin datos</string>
    <string name="nombre_str">Nombre</string>
    <string name="telefono_str">Telefono</string>
    <string name="colonia_str">Colonia</string>
    <string name="contra_str">Contraseña</string>
    <string name="calle_str">Calle</string>
    <string name="entreCalle_str">Entre calle</string>
    <string name="numeroInt_str">Numero Interior</string>
    <string name="calificar_str">Calificar</string>

    <!-- Ubicacion Recicladora -->
    <string name="miUbicacion_str">Mi ubicacion</string>
    <string name="ubicacionAgregada_str">Ubicacion agregada</string>
    <string name="ubicacionActualizada_str">Ubicacion Actualizada</string>

    <!-- Registrar venta -->
    <string name="datosVenta_str">Datos de ventas</string>
    <string name="cliente_str">Nombre cliente</string>
    <string name="materialVendido_str">Material vendido:</string>
    <string name="cantidadVendida_str">Cantidad vendida</string>
    <string name="ganancia_str">Ganancia</string>
    <string name="fechaVenta_str">Fecha de la venta</string>
    <string name="registroAgregado_str">Registro agregado</string>
    <string name="agregarVenta_str">Agregar venta</string>
    <string name="historialVenta_str">HISTORIAL DE VENTAS</string>
    <string name="clientedospuntos_str">Cliente:</string>
    <string name="iddospuntos_str">ID:</string>
    <string name="materialdospuntos_str">Material:</string>
    <string name="cantidaddospuntos_str">Cantidad:</string>
    <string name="unidaddospuntos_str">Unidad:</string>
    <string name="gananciadospuntos_str">Ganancia:</string>
    <string name="fechadospuntos_str">Fecha:</string>
    <string name="editarRegistro_str">Editar registro</string>
    <string name="ventaEliminada_str">Venta eliminada</string>

    <!-- Registrar Compra -->
    <string name="datosCompras_str">Datos de Compras</string>
    <string name="agregarCompra_str">Agregar compra</string>
    <string name="historialCompras_str">HISTORIAL DE COMPRAS</string>
    <string name="materialComprado">Material comprado:</string>
    <string name="cantidadComprada_str">Cantidad comprada</string>
    <string name="gasto_str">Cantidad pagada</string>
    <string name="fechaCompra_str">Fecha de la compra:</string>
    <string name="compraEliminada_str">Compra eliminada</string>

    <!-- Reporte  -->
    <string name="generarReporte_str">Generar reporte</string>
    <string name="fechaInicio_str">Fecha inicio</string>
    <string name="fechaCorte_str">Fecha corte</string>
    <string name="enviarCorreo_str">Enviar por correo</string>
    <string name="gananciaTotal_str">Total:</string>
    <string name="otroCorreo_str">Otro correo</string>
    <string name="pagado_str">Total pagado:</string>
    <string name="sinCorreo_str">Sin correo registrado</string>

    <string name="listaMateriales_str">Lista de materiales</string>
    <string name="listaUnidades_str">Lista de unidades</string>

</resources>