<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Recicladora.DatosRecicladora"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

        <ImageButton
                android:id="@+id/btnAtras_datosrecicladora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:backgroundTint="@color/colorPrimaryDark"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tusDatos_str"
                android:textColor="@color/colorNegro"
                android:textSize="19sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNombre_datosRecicladora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_str"
                android:textColor="@color/colorNegro"
                android:inputType="text"
                android:maxLength="35"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCorreo_datosRecicadora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_str"
                    android:textColor="@color/colorNegro"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:layout_marginLeft="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled = "true"
                app:passwordToggleDrawable="@drawable/ojo_icono">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietContra_datosRecicladora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contra_str"
                    android:textColor="@color/colorNegro"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietTelefono_datosRecicladora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_str"
                android:textColor="@color/colorNegro"
                android:inputType="number"
                android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietCalle_datosRecicladora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calle_str"
                android:textColor="@color/colorNegro"
                android:inputType="text"
                android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietColonia_datosRecicladora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/colonia_str"
                android:textColor="@color/colorNegro"
                android:inputType="text"
                android:maxLength="50"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNumeroint_datosRecicladora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numeroInt_str"
                android:textColor="@color/colorNegro"
                android:inputType="number"
                android:maxLength="8"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbModificardatos_datosRecicladora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cornerRadius="30dp"
            app:icon="@drawable/modificar_icono"
            app:rippleColor="@color/colorNegro"
            android:text="@string/modificarDatos_str"
            android:layout_alignParentBottom="true"
            android:onClick="modificarDatos"/>
    </RelativeLayout>
</LinearLayout>