<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".IniciarSesion">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUsuario_registroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUsuario_registroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/nombreUsuario_str"
                    android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCorreo_registroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCorreo_registroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/correo_str"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilContra_registroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etContra_registroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/contraHint_str"
                    android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirContra_registroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etConfirmarContra_registroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/confirmaContra_str"
                    android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>