<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Recicladora.RegistrarCompra">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

            <ImageButton
                    android:id="@+id/btnAtras_registroCompra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:backgroundTint="@color/colorPrimaryDark"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarCompra_str"
                    android:textColor="@color/colorNegro"
                    android:textSize="19sp"/>
        </android.support.v7.widget.Toolbar>

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

            <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Empresa" />

            <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cliente persona" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietNombreCompra_registroCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cliente_str"
                    android:inputType="text"
                    android:maxLength="70"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/materialComprado"
                android:textColor="@color/colorNegro"/>

        <Spinner
                android:id="@+id/spMaterialCompra_registroCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/spinner_background"
                android:paddingTop="3dp"
                android:paddingBottom="3dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietCantidadCompra_registroCompra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidadComprada_str"
                        android:inputType="numberDecimal"
                        android:maxLength="10"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                    android:id="@+id/spUnidadCompra_registroCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/spinner_background"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietGasto_registroCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gasto_str"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/fechaCompra_str"
                android:textColor="@color/colorNegro"/>

        <DatePicker
                android:id="@+id/dpFechaCompra_registroCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_gravity="center"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/mbRegistroCompra_registroCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/registrar_str"
                app:cornerRadius="15dp"/>
    </LinearLayout>
</ScrollView>