<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Recicladora.RegistroVenta">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

            <ImageButton
                    android:id="@+id/btnAtras_registroVenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:backgroundTint="@color/colorPrimaryDark"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarVenta_str"
                    android:textColor="@color/colorNegro"
                    android:textSize="19sp"/>
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietNombreVenta_registroVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cliente_str"
                    android:inputType="text"
                    android:maxLength="70"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/materialVendido_str"
                android:textColor="@color/colorNegro"/>

        <Spinner
                android:id="@+id/spMaterialVendido_registroVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/spinner_background"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:entries="@array/materiales"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietCantidad_registroVenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidadVendida_str"
                        android:inputType="numberDecimal"
                        android:maxLength="10"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                    android:id="@+id/spUnidad_registroVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/spinner_background"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_weight="1"
                    android:entries="@array/unidades"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietGanacia_registroVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ganancia_str"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>
        </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_weight="2">
                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/tietFecha_registroVenta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fechaVenta_str"
                            android:inputType="date"
                            android:maxLength="10"
                            android:focusable="false"
                            android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                        android:id="@+id/ibCalendario_registroVenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="7dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@drawable/calendario_icono"
                        android:backgroundTint="@color/colorAmarillo"/>
            </LinearLayout>

        <android.support.design.button.MaterialButton
                android:id="@+id/mbRegistroVenta_registroVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/registrar_str" />
    </LinearLayout>
</ScrollView>